<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_play_pause"
        android:icon="@drawable/ic_pause_white_24dp"
        android:title="@string/pause"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_record_toggle"
        android:icon="@drawable/ic_fiber_manual_record_white_24dp"
        android:title="@string/start_recording"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_log_priority"
        android:title="@string/log_priority" />
    <item
        android:id="@+id/action_save"
        android:title="@string/save_to_file" />
</menu>