<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/action_rename"
      android:icon="@drawable/ic_mode_edit_white_24dp"
      android:title="@string/rename"
      app:showAsAction="always" />

  <item
      android:id="@+id/action_export"
      android:icon="@drawable/ic_save_white_24dp"
      android:title="@string/export"
      app:showAsAction="always" />

  <item
      android:id="@+id/action_share"
      android:icon="@drawable/ic_share_white_24dp"
      android:title="@string/share"
      app:showAsAction="always" />

  <item
      android:id="@+id/action_select_all"
      android:icon="@drawable/ic_select_all_white_24dp"
      android:title="@string/select_all"
      app:showAsAction="always" />

  <item
      android:id="@+id/action_delete"
      android:icon="@drawable/ic_delete_white_24dp"
      android:title="@string/delete"
      app:showAsAction="always" />

</menu>