<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="pref_key_main_screen">
    <PreferenceCategory android:title="@string/pref_cat_appearance">
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/pref_theme_title"
            android:entries="@array/theme_pref_entries"
            android:entryValues="@array/theme_pref_values"
            android:key="pref_key_appearance_theme"
            android:persistent="true"
            android:title="@string/pref_theme_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_appearance_use_black_theme"
            android:persistent="true"
            android:title="@string/pref_theme_black_theme" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">
        <Preference
            android:key="pref_key_version_name"
            android:selectable="false"
            android:title="@string/app_name" />
    </PreferenceCategory>
</PreferenceScreen>