<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingLeft="24dp"
      android:paddingTop="20dp"
      android:paddingRight="24dp"
      android:paddingBottom="24dp"
      >

    <com.dp.logcatapp.views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_instruction0"
        android:textSize="16sp"
        app:useFont="@string/font_Roboto_Regular"
        />

    <com.dp.logcatapp.views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/permission_instruction1"
        android:textSize="16sp"
        app:useFont="@string/font_Roboto_Regular"
        />

    <com.dp.logcatapp.views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/permission_instruction2"
        android:textSize="16sp"
        app:useFont="@string/font_Roboto_Regular"
        />

    <com.dp.logcatapp.views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/permission_instruction3"
        android:textColor="@color/color_accent"
        android:textSize="16sp"
        app:useFont="@string/font_RobotoMono_Medium"
        />

    <com.dp.logcatapp.views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/permission_instruction4"
        android:textSize="16sp"
        app:useFont="@string/font_Roboto_Regular"
        />

    <com.dp.logcatapp.views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/permission_instruction5"
        android:textSize="16sp"
        app:useFont="@string/font_Roboto_Regular"
        />

    <com.dp.logcatapp.views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/permission_instruction6"
        android:textSize="16sp"
        app:useFont="@string/font_Roboto_Regular"
        />

  </LinearLayout>
</ScrollView>
